--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Library</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css" rel="stylesheet">
   <style>
   body { 
     background: url(http://player.hu/uploads/2016/04/183655-R3L8T8D-1000-ll.jpg) no-repeat;
@@ -25,10 +24,43 @@
       background: rgba(0, 0, 0, 0.7);
       padding: 10px 10px 10px 16px;
   }
+
+  button {
+          display: inline-block;
+          font-weight: bold;
+          color: #fff;
+          text-decoration: none;
+          text-shadow: 0 -1px rgba(0,0,0,.5);
+          user-select: none;
+          padding: .7em 1.5em;
+          border: 1px solid rgb(80,32,0);
+          border-radius: 5px;
+          outline: none;
+          background: rgb(147,80,36) linear-gradient(rgb(106,58,26), rgb(147,80,36) 80%);
+          box-shadow:
+          0 6px rgb(86,38,6),
+          0 3px 15px rgba(0,0,0,.4),
+          inset 0 1px rgba(255,255,255,.3),
+          inset 0 0 3px rgba(255,255,255,.5);
+          transition: .2s;
+        } 
+        .button19:hover {
+          background: rgb(167,91,41) linear-gradient(rgb(126,69,31), rgb(167,91,41) 80%);
+        }
+        .button19:active {
+          background: rgb(120,63,25) linear-gradient(rgb(120,63,25) 20%, rgb(167,91,41));
+          box-shadow:
+          0 2px rgb(86,38,6),
+          0 1px 6px rgba(0,0,0,.4),
+          inset 0 1px rgba(255,255,255,.3),
+          inset 0 0 3px rgba(255,255,255,.5);
+          -webkit-transform: translate(0, 4px);
+          transform: translate(0, 4px);
+}
   
   </style>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="library"></div>
 </body>
 </html>
